changing one of my links

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </li>
 
         <li>
-          <a href="https://github.com/AugustoRocha2604" target="_blank"
+          <a href="https://github.com/augustorochh" target="_blank"
             >Github</a
           >
         </li>
