--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
         </li>
 
         <li>
-          <a href="https://github.com/augustorochh" target="_blank"
-            >Github</a
-          >
+          <a href="https://github.com/augustorochh" target="_blank">Github</a>
         </li>
 
         <li>
